<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.KatalogFilm_byFadli.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.KatalogFilm_byFadli.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_detail_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/backdrop_image"
                android:scaleType="fitXY"
                android:src="@color/teal_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/backdrop_image"
                android:scaleType="fitXY"
                android:src="@color/black_transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_poster"
                android:layout_width="150dp"
                android:layout_height="210dp"
                android:layout_marginTop="36dp"
                android:elevation="4dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/poster_image"
                    android:scaleType="fitXY"
                    android:src="@color/teal_200" />

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/favorite"
                android:src="@drawable/ic_baseline_favorite_border_24"
                app:layout_constraintBottom_toBottomOf="@+id/tv_title"
                app:layout_constraintEnd_toEndOf="@+id/iv_backdrop"
                app:layout_constraintStart_toEndOf="@+id/cv_poster"
                app:layout_constraintTop_toTopOf="@+id/cv_poster" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="18dp"
                android:maxLines="2"
                android:text="@string/title"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/iv_backdrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_poster" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="2dp"
                android:maxLines="2"
                android:text="@string/genre"
                android:textColor="?attr/colorSecondary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:maxLines="2"
                android:text="@string/overview"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_backdrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

            <TextView
                android:id="@+id/tv_overview_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="6dp"
                android:text="@string/overview_example"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_backdrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

            <TextView
                android:id="@+id/tv_first_air_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/first_air_date"
                app:layout_constraintStart_toStartOf="@+id/tv_overview_value"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview_value" />

            <TextView
                android:id="@+id/tv_first_air_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textColor="?attr/colorPrimaryVariant"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_vote_average_value"
                app:layout_constraintTop_toTopOf="@+id/tv_first_air_date" />

            <TextView
                android:id="@+id/tv_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/vote_average"
                app:layout_constraintStart_toStartOf="@+id/tv_first_air_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_first_air_date" />

            <TextView
                android:id="@+id/tv_vote_average_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/vote_average_value"
                android:textColor="?attr/colorPrimaryVariant"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tv_vote_average"
                app:layout_constraintTop_toTopOf="@+id/tv_vote_average" />

            <TextView
                android:id="@+id/tv_vote_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/vote_total"
                app:layout_constraintStart_toStartOf="@+id/tv_vote_average"
                app:layout_constraintTop_toBottomOf="@+id/tv_vote_average" />

            <TextView
                android:id="@+id/tv_vote_total_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="40dp"
                android:text="@string/vote_total_value"
                android:textColor="?attr/colorPrimaryVariant"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_vote_average_value"
                app:layout_constraintTop_toBottomOf="@+id/tv_vote_average_value" />


            <include
                android:id="@+id/detail_error"
                layout="@layout/layout_error"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>